# autodiff

./: CMakeLists.txt  Makefile  README.md
autodiff/: CMakeLists.txt  eqn.hpp  functions.hpp  gradient.hpp  token.hpp  var.hpp
autodiff/autodiff/: functions.hpp  rad.hpp  token.hpp  unique_stack.hpp  var.hpp
autodiff/autodiff/tests/: CMakeLists.txt  expression_test.cpp  rad_test.cpp  token_test.cpp  var_test.cpp
autodiff/io/: container_types.hpp  expression.hpp  infix.hpp  postfix.hpp  scanner.hpp  state.hpp  token.hpp  var.hpp
autodiff/io/tests/: CMakeLists.txt  container_types_test.cpp  expression_test.cpp  infix_test.cpp  postfix_test.cpp  state_test.cpp  token_test.cpp  var_test.cpp
autodiff/tests/: CMakeLists.txt  eqn_test.cpp  expression_test.cpp  gradient_test.cpp  token_test.cpp  var_test.cpp
cmake/: googletest-download.cmake
examples/: CMakeLists.txt  example_1.cpp  gd.cpp  gradients.cpp
